# jhelper-example-project

./: .clang-format  .gitignore  CMakeLists.txt  run.template  task.template
tasks/: BHokudaiHitachi2020B.cpp
